--- a/comments/templates/Comments/comment.html
+++ b/comments/templates/Comments/comment.html
@@ -1,6 +1,6 @@
 {% extends "Comments/base.html" %}
 {% load bootstrap3 %}
-{% load staticfiles %}
+{% load static %}
 
 {% block title %}
     Django reCAPTCHA Tutorial
@@ -22,12 +22,12 @@
     <hr>
     {% endfor %}
 
-    <form action="/" method="post">
+    <form action="/comments/" method="post">
         {% csrf_token %}
         {% bootstrap_form form %}
         {% buttons %}
             <button type="submit" class="btn btn-success btn-product">
-                <i class="fa fa-check" aria-hidden="true"></i> POST
+                <i class="fa fa-check" aria-hidden="true"></i>POST
             </button>
         {% endbuttons %}
     </form>
